# 42-projects

./: .gitignore  README.md  cub3d
common-core/webserv/: .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cookies.txt  nginx.conf  tags
common-core/webserv/cgi-bin/: delete-file.py  err.py  list-files.py  log-viewer.py  login.py  logout.py  me.py  sessions.json  slow_cgi.py  test.go  test.php
common-core/webserv/cgi-bin/session/: sessions.json
common-core/webserv/config/: default-container.conf  default.conf  default2.conf  lucas.conf  max.conf
common-core/webserv/config/ParserConf/: ForbitenPrmtrsinCGI00.conf  ForbitenPrmtrsinCGI01.conf  ForbitenPrmtrsinCGI02.conf  ForbitenPrmtrsinLocation00.conf  ForbitenPrmtrsinLocation01.conf  ForbitenPrmtrsinLocation02.conf  badSyntax.conf  badSyntax01.conf  badSyntax02.conf  noAccessRoot.conf  noCgiBin.conf  noPort.conf  noRootCGI.conf  noRootLocation.conf  noRootServer.conf  noValadePort.conf  samePortSever.conf
common-core/webserv/config/TestConf/: 1kb.conf  HeritanceBody.conf  JusteServer.conf  noBindPort.conf  noErrorPage.conf  noUploadDir.conf  portNameLocalHost.conf
common-core/webserv/includes/: HttpRequest.hpp  HttpResponse.hpp  Logger.hpp  RequestHandler.hpp  http_status_code.hpp  http_utils.hpp  server_config.hpp
common-core/webserv/includes/handlers/: static_stream.hpp  upload_stream.hpp
common-core/webserv/includes/lib/: fd_guard.hpp  file_io.hpp  file_utils.hpp  socket_guard.hpp  stream_buffer.hpp  utils.hpp
common-core/webserv/srcs/: Logger.cpp  main.cpp  tests.cpp
common-core/webserv/srcs-tester/: Dockerfile  main.cpp  malformed_req.py
common-core/webserv/srcs-tester/py-tester/: script-siege.py  scritp-siege-valgrind.py  urlBasic.txt  urlFull.txt  urls.txt
common-core/webserv/srcs-tester/src/: Makefile  main.cpp
common-core/webserv/srcs/config/: server_config.hpp
common-core/webserv/srcs/core/: client_connection.cpp  client_connection.hpp  connection_manager.cpp  connection_manager.hpp  response_streamer.cpp  response_streamer.hpp  server_status.cpp  server_status.hpp  tcp_server.cpp  tcp_server.hpp  web_server.cpp  web_server.hpp
common-core/webserv/srcs/handlers/: RequestHandler.cpp  RequestHandler.hpp  cgi_handler.cpp  cgi_handler.hpp  cgi_process.cpp  (+9 more)
common-core/webserv/tester/: Dockerfile
common-core/webserv/testers/: malformed_req.py
common-core/webserv/www/: STATUS_PAGE_FEATURES.md  comparison-tests.js  config.html  cookies.html  cyberpunk-bg.avif  empty.html  error.html  frontend_ideas.md  index copy.html  index.html  log-viewer.html  page.html  session-test.html  session.html  upload.html  upload_copy.html
(+1059 files in other folders)
